# FreeRDP

./: CMakeCPack.cmake  CMakeLists.txt  REBASE_CONFLICT_RESOLUTION_REPORT.md
DevolutionsRdp/: CMakeLists.txt  DevolutionsRdp.c  DevolutionsRdp.h  channel_stub.c  clipboard.c  cursor.c  headless.c  headless.h  virtualchannel.c  virtualchannel.h
channels/audin/client/: CMakeLists.txt  audin_main.c
channels/audin/client/ios/: CMakeLists.txt  audin_ios.m
channels/audin/client/mac/: audin_mac.m
channels/nowproto/: CMakeLists.txt  ChannelOptions.cmake
channels/nowproto/client/: CMakeLists.txt  nowproto_main.c  nowproto_main.h
channels/rdpecam/: ChannelOptions.cmake
channels/rdpecam/client/: CMakeLists.txt  camera.h  camera_device_main.c  encoding.c
channels/rdpecam/client/v4l/: CMakeLists.txt  camera_v4l.c  uvc_h264.c
channels/rdpsnd/client/ios/: CMakeLists.txt  rdpsnd_ios.c
channels/rdpsnd/client/opensles/: opensl_io.c
client/Android/: android_freerdp.c
client/Android/Studio/freeRDPCore/src/main/cpp/: android_freerdp.c
client/SDL/: CMakeLists.txt
client/common/: cmdline.c  cmdline.h
cmake/: CommonConfigOptions.cmake  FindOpenSSL.cmake  MSVCRuntime.cmake
include/config/: config.h.in
include/freerdp/: settings.h
include/freerdp/channels/: nowproto.h
include/freerdp/client/: nowproto.h
include/freerdp/codec/: video.h
libfreerdp/codec/: color.c  h264_openh264.c  image_ffmpeg.c  planar.c  progressive.c  progressive.h  rfx_rlgr.c  swscale.c  swscale.h  swscale_loader.c  swscale_loader.h  video.c
libfreerdp/common/: settings_getters.c  settings_str.c
libfreerdp/core/: credssp_auth.c  credssp_auth.h  license.c  nla.c  nla.h  peer.c  tcp.c
libfreerdp/core/test/: settings_property_lists.h
libfreerdp/crypto/: tls.c
libfreerdp/utils/: pcap.c  smartcard_pack.c
winpr/: CMakeLists.txt
winpr/include/config/: wtypes.h.in
winpr/include/winpr/: custom-crypto.h  sspi.h  stream.h  sysinfo.h  wtypes.h.in
winpr/libwinpr/: CMakeLists.txt
winpr/libwinpr/comm/: CMakeLists.txt
winpr/libwinpr/crt/: unicode.c
winpr/libwinpr/crypto/: cipher.c  hash.c  rand.c
winpr/libwinpr/input/: keycode.c
winpr/libwinpr/ncrypt/: ncrypt_pkcs11.c
winpr/libwinpr/sspi/: sspi.c  sspi_export.c  sspi_winpr.c
winpr/libwinpr/sspi/Kerberos/: kerberos.c
winpr/libwinpr/sspi/NTLM/: ntlm.c
winpr/libwinpr/sspi/Negotiate/: negotiate.c
winpr/libwinpr/sysinfo/: sysinfo.c
winpr/libwinpr/timezone/: timezone.c
winpr/libwinpr/utils/: CMakeLists.txt
winpr/libwinpr/utils/windows/: debug.c
winpr/libwinpr/utils/wlog/: Appender.c  BinaryAppender.c  Layout.c  Layout.h  UdpAppender.c  wlog.c
